# soccer-bg-script

./: .gitattributes  .gitignore  README.md  pyproject.toml
annotation_tool/: annotation-description.txt  annotation-human.md  annotation-target.txt  annotation_guideline.md  annotation_template.xlsx  book_10_1_target_prompt_True.csv  haruki_annotation-target.txt  sakou_42_1_target_prompt.txt  subcategory_annotation_sheet.xlsx  subcategory_annotation_sheet_付加的情報のみ抽出.xlsx  ~$subcategory_annotation_sheet.xlsx
annotation_tool/audio/: vad.txt
notebook/: Untitled-1.ipynb  analysis-commentary-spotting.ipynb  ball_tracking.ipynb  data_analysis.ipynb  explore_player_wiki.ipynb  explore_players.ipynb  explore_scbi-v2.ipynb  explore_sn-caption.ipynb  explore_whisper_span.ipynb  explore_whisperx_comments.ipynb  misc.ipynb  soccerdata.ipynb
resources/: 10_1_target_prompt.txt  10_1_target_prompt_True.csv  10_1_target_prompt_True.txt  10_1_target_prompt_True_moriy.txt  42_1_target_prompt.txt  5-1_classify_comment-subcategory.yaml  5-1_classify_comment-subcategory_context_aware.yaml  5-2_classify_comment-subcategory_context_aware.yaml  6-1_classify_comment-subcategory.yaml  chatgpt-prompt-en.txt  chatgpt-prompt-re-en.txt  chatgpt-prompt-subcategory-en.txt  chatgpt-prompt-subcategory-ja.txt  classify_comment-6shot.yaml  classify_comment-include-only.yaml  classify_comment-multilabel.yaml  classify_comment-nogame.yaml  classify_comment-noreason.yaml  classify_comment-subcategory.yaml  classify_comment-yesno-only.yaml  classify_comment-yesno.yaml
scripts/: evaluate-vad.sh  plot_voice_detection.sh  plot_voice_detection_annotation.sh  plot_voice_detection_faster_whisper.sh  plot_voice_detection_whisperx.sh  speech2text-faster-whisper-example.sh  speech2text-whisperx-example.sh  speech2text-whisperx-stable.sh  speech2text-whisperx-v2-example.sh  speech2text-whisperx-v3-example.sh  usage.md  vad2csv.sh  video2wav.sh  whisper2csv-faster-whisper.sh  whisper2csv-whisperx-v2.sh  whisper2csv-whisperx-v3.sh  whisper2csv-whisperx.sh  whisper2csv.sh
scripts/download/: download-v3.sh
scripts/experiment-llm-annotation/: exp0-1.sh  exp000.sh  exp001.sh  exp002.sh  exp003.sh  exp004.sh  exp005.sh
scripts/experiment-translate/: evaluate-traslate-scbi-v2.sh  evaluate-traslate.sh  speech2text-translate.sh  whisper2csv.sh
scripts/experiment-vad/: plot_voice_detection.sh  plot_voice_detection_annotation.sh  plot_voice_detection_faster_whisper.sh  usage.md  vad2csv.sh  whisper2csv-whisperx.sh
scripts/knowledge-base/: construct.sh
scripts/player-identification/: run.sh
scripts/spotting/: gen-result-gold.sh  prepare-datasets.sh
scripts/stable/: build_scbi.sh  llm_annotation_local.sh  speech2text-whisperx-stable.sh
scripts/v3/: check-gsr.sh  download-v3.sh  gen-player-csv.sh  gsr2ocr.sh  v3_2_players.sh  v3_to_gsr-720p-team.sh  v3_to_gsr-720p.sh  v3_to_gsr.sh  v3_to_players.sh  visualize-720p.sh  visualize.sh
src/: memo.md
src/app/: main.py
src/data/: all_targets.txt  video_files.txt
src/resources/: 42_1_target_prompt.txt  chatgpt-prompt-en-multilabel.txt  chatgpt-prompt-en.txt  chatgpt-prompt-ja-multilabel.txt  chatgpt-prompt-ja.txt  chatgpt-prompt-subcategory-ja.txt  chatgpt-prompt.txt  classify_comment.yaml
src/sn_script/: __init__.py  calculate_corpus_stats.py  caption_download.py  config.py  converter.py  count_words.py  create_spotting_dataset.py  csv_utils.py  curate_commentary_spans.py  curate_gsr_labels.py  curate_sncaption_players.py  curate_snechoes_spans.py  curate_soccernet_labels.py  curate_soccernet_spotting_labels.py  download_articles.py  download_soccernet_data.py  draw_voice_detection.py  evaluate_llm_annotation.py  evaluate_translate.py  evaluate_vad.py  exist_targets.txt  extract_text.py  json2csv.py  json2webvtt.py  llm_anotator.py  (+15 more)
(+66 files in other folders)
