[project]
name = "sn-script"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "zaemon1251-hesty", email = "hisakawa1251@gmail.com" }]
dependencies = [
    "SoccerNet>=0.1.52",
    "pandas>=2.0.3",
    "openai>=1.3.0",
    "pyannotate>=1.2.0",
    "nltk>=3.8.1",
    "transformers>=4.34.1",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.10.0",
    "isort>=5.12.0",
    "flake8>=5.0.4",
    "mypy>=1.6.1",
    "pyproject-flake8>=5.0.4.post1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503,"
