[project]
name = "sn-script"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "zaemon1251-hesty", email = "hisakawa1251@gmail.com" }]
dependencies = [
    "SoccerNet>=0.1.52",
    "pandas>=2.0.3",
    "openai>=1.3.0",
    "nltk>=3.8.1",
    "loguru>=0.7.2",
    "scikit-learn>=1.3.2",
    "evaluate==0.4.1",
    "huggingface-hub==0.19.3",
    "transformers>=4.36.0",
    "torch>=2.1.2",
    "ipykernel>=6.28.0",
    "matplotlib>=3.7.4",
    "MeCab>=0.996.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.10.0",
    "isort>=5.12.0",
    "flake8>=5.0.4",
    "mypy>=1.6.1",
    "pyproject-flake8>=5.0.4.post1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503,"
