[project]
name = "sn-script"
version = "0.1.0"
description = "SoccerNetに関連するデータの構築・分析スクリプト集"
authors = [{ name = "zaemon1251-hesty", email = "hisakawa1251@gmail.com" }]
dependencies = [
    "SoccerNet>=0.1.52",
    "pandas>=2.0.3",
    "openai>=1.3.0",
    "nltk>=3.8.1",
    "loguru>=0.7.2",
    "scikit-learn>=1.3.2",
    "evaluate==0.4.1",
    "huggingface-hub==0.19.3",
    "transformers>=4.36.0",
    "torch>=2.1.2",
    "ipykernel>=6.28.0",
    "matplotlib>=3.7.4",
    "MeCab>=0.996.3",
    "langchain>=0.0.27",
    "bs4>=0.0.2",
    "typed-argument-parser>=1.10.1",
    "trafilatura>=1.12.1",
    "lxml_html_clean>=0.2.0",
    "soundfile>=0.12.1",
    "faster-whisper>=1.0.3",
    "whisper>=1.1.10",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.10.0",
    "isort>=5.12.0",
    "flake8>=5.0.4",
    "mypy>=1.6.1",
    "pyproject-flake8>=5.0.4.post1",
    "jinja2>=3.1.3",
    "fastapi>=0.110.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "third_party"]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL", # Pylint
    "UP", # pyupgrade
]
ignore = [
    "B905",    # Zip-without-explicit-strict
    "E501",    # Line too long
    "F403",    # Unable to detect undefined names
    "N812",    # Lowercase imported as non-lowercase
    "N999",    # Invalid module name
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
